[gd_scene load_steps=4 format=2]

[ext_resource path="res://Images/icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bullet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Bullet" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="."]
scale = Vector2( 0.224587, 0.224587 )
texture = ExtResource( 1 )

[node name="BulletLife" type="Timer" parent="."]
one_shot = true

[node name="icon2" type="Sprite" parent="."]
visible = false
position = Vector2( 148.376, 4.08794 )
texture = ExtResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="BulletLife" to="." method="_on_BulletLife_timeout"]
